--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 
-	<!----About section start---->
+	<!---- About Me ---->
 	<section class="about" id="about_me">
 		<div class="main">
 			<img src="img/main-img.jpeg" class="mainImg">
@@ -79,7 +79,7 @@
 		});
 		</script>
 
-	<!-----service section start----------->
+	<!-----My Carrer------>
 	<div class="My_carrer" id="MyCarrer">
 		<div class="title">
 			<h2>My Carrer</h2>
