--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 	<div class="Home">
 		<nav>
-			<h2 class="logo" ><span>My</span> Resumee</h2>
+			<h2 class="logo" ><span>My</span> Resume</h2>
+			
 			<i class="fas fa-bars" id="Responsive"></i>
 			<ul>
 				<li><a href="#">Home</a></li>
@@ -36,7 +37,7 @@
 		</div>
 	</div>
 
-	<!---- About Me ---->
+	<!----About Me section---->
 	<section class="about" id="about_me">
 		<div class="main">
 			<img src="img/main-img.jpeg" class="mainImg">
@@ -44,7 +45,8 @@
 				<h2>About Me</h2>
 				<h5>Data Scientist <span>& Web-Dev</span></h5>
 				<p>I am passionate about the world of DATA. I am enrolled in AI & Management Master, <b>Data Scientist</b> path at IA School in Paris, and I want to evolve in this field within a company in which I can increase my competence and bring my rigor.</p>
-				<button onclick="window.location.href='#Contact'">I have an opportunity for you</button>
+				<button onclick="window.location.href='https://drive.google.com/file/d/13QS-v5qgt2j8WrrxJuhTynik2Nbszqkw/view?usp=sharing'"> <i class="fas fa-cloud-download-alt"></i></i> Get Full Resume in English</button>
+				<button onclick="window.location.href='https://drive.google.com/file/d/11opl9Ds75LaFMuqqLFhNYRetnEwHiBWd/view?usp=sharing'"> <i class="fas fa-cloud-download-alt"></i></i> Get Full Resume in French</button>
 			</div>
 		</div>
 	</section>
@@ -79,7 +81,7 @@
 		});
 		</script>
 
-	<!-----My Carrer------>
+	<!-----MyCareer Section----------->
 	<div class="My_carrer" id="MyCarrer">
 		<div class="title">
 			<h2>My Carrer</h2>
@@ -112,7 +114,7 @@
 					
 				</div>
 			</div>
-
+			<button onclick="window.location.href='#Contact'">I have an opportunity for you</button>
 		
 		</div>
 	</div>
